Add logic to store number  buttoninput.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <button class="number" id="9">9</button>
         <button class="operator" id="multi">x</button>
         <button class="space"></button>
-        <button class="number" id="zero">0</button>
+        <button class="number" id="0">0</button>
         <button class="space"></button>
         <button class="operator" id="/">/</button>
     </div>
