Add logic for performing operations.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <button class="space"></button>
         <button class="number" id="0">0</button>
         <button class="space"></button>
-        <button class="operator" id="/">/</button>
+        <button class="operator" id="div">/</button>
     </div>
         
     
